--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "Backend.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "app.py" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "Backend.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "Backend.py" }
+  ]
+}
