Add vercel.json and prepare for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "Backend.py", "use": "@vercel/python" }
-  ],
   "routes": [
-    { "src": "/(.*)", "dest": "Backend.py" }
+    {
+      "src": "/(.*)",
+      "dest": "Backend.py"
+    }
   ]
 }
